fix for collapsed paragraph spacing

--- a/regulations/static/regulations/css/less/module/paragraph-markers.less
+++ b/regulations/static/regulations/css/less/module/paragraph-markers.less
@@ -30,6 +30,15 @@ ol, li {
     float: left;
   }
 
+  .collapsed + ol {
+    margin-top: 0;
+
+    p:first-child {
+      margin-top: 0;
+    }
+
+  }
+
   p {
     position: relative;
 
